# GK-Healter

./: .coverage  .coveragerc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.tr.md  coverage.xml  sonuc.md
.github/workflows/: ci.yml
gk-healter/: .gitignore  Makefile  ai_config_snippet.xml  flathub_submission.yml  meson.build
gk-healter/build-aux/: meson_post_install.py  render_icons.py
gk-healter/data/: io.github.gkdevelopers.GKHealter.desktop  io.github.gkdevelopers.GKHealter.metainfo.xml  io.github.gkdevelopers.GKHealter.policy
gk-healter/debian/: changelog  control  postinst  prerm
gk-healter/packaging/arch/: PKGBUILD
gk-healter/resources/: main_window.ui  main_window.ui.bak
gk-healter/src/: __init__.py  ai_engine.py  auto_maintenance_manager.py  cleaner.py  disk_analyzer.py  distro_manager.py  gk-healter.in  health_engine.py  history_manager.py  i18n_manager.py  log_analyzer.py  logger.py  main.py  pardus_analyzer.py  pardus_verifier.py  recommendation_engine.py  report_exporter.py  security_scanner.py  service_analyzer.py  settings_manager.py  ui.py  ui.py.old  utils.py
gk-healter/src/locale/: en.json  en.json.bak  tr.json  tr.json.bak
pardus-system-cleaner/: .gitignore  Makefile  pardus-system-cleaner.desktop
pardus-system-cleaner/debian/: control
pardus-system-cleaner/resources/: main_window.ui  style.css
pardus-system-cleaner/src/: auto_maintenance_manager.py  cleaner.py  main.py  settings_manager.py  ui.py  utils.py
pardus-system-cleaner/src/locale/: en.json  tr.json
tests/: .gitignore  conftest.py  test_ai_engine.py  test_auto_maintenance.py  test_cleaner.py  test_disk_analyzer.py  test_distro_manager.py  test_health_engine.py  test_history_manager.py  test_i18n_manager.py  test_log_analyzer.py  test_logger.py  test_pardus_analyzer.py  test_pardus_verifier.py  test_recommendation_engine.py  test_report_exporter.py  test_security_scanner.py  test_service_analyzer.py  test_settings_manager.py  test_utils.py
tests/gk_healter_tests/: __init__.py  helpers.py
zerra-system-cleaner/: .gitignore  Makefile  io.github.mustafa4631.ZerraSystemCleaner.desktop  io.github.mustafa4631.ZerraSystemCleaner.metainfo.xml  io.github.mustafa4631.ZerraSystemCleaner.yml  pardus-system-cleaner.desktop  zerra-system-cleaner.desktop
zerra-system-cleaner/build-aux/: meson_post_install.py  render_icons.py
zerra-system-cleaner/data/: io.github.mustafa4631.ZerraSystemCleaner.desktop  io.github.mustafa4631.ZerraSystemCleaner.metainfo.xml
zerra-system-cleaner/debian/: control  prerm
zerra-system-cleaner/resources/: main_window.ui
zerra-system-cleaner/src/: cleaner.py  history_manager.py  settings_manager.py  ui.py  zerra-system-cleaner.in
